syntax = "proto3";

package gameplay_service;

message BuySeedsRequest {          
    string userId = 1;    
    string cropId = 2;      
    int32 quantity = 3;  
}
